# zeroNoteSamba

./: .flake8  README.md  ballroom.py  beat_down.py  cross_data.py  data_exp.py  drum_playground.ipynb  epochs.py  fma_loader.py  gtzan.py  hainsworth.py  loader.py  measures.py  old_school.py  pretext.py  pyproject.toml  requirements.txt  sample_script.py  smc_mirex.py
configuration/: config.yaml
models/: clmr.py  loss_functions.py  models.py
processing/: evaluate.py  input_rep.py  source_separation.py  stem_check.py  utilities.py
results/: beat_tracking.xlsx  cross_data.xlsx  few_shot.xlsx  measures.xlsx  supervised.xlsx  unsupervised.xlsx
zeroNoteSamba/: ballroom.py  beat_down.py  cross_data.py  data_exp.py  epochs.py  fma_loader.py  gtzan.py  hainsworth.py  loader.py  measures.py  old_school.py  pretext.py  smc_mirex.py
zeroNoteSamba/configuration/: config.yaml
zeroNoteSamba/models/: loss_functions.py  models.py
zeroNoteSamba/processing/: evaluate.py  input_rep.py  source_separation.py  stem_check.py  utilities.py
